[FIX] #67293 Select which inventory types to show

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/InventorySettings/InventoryTypesGrid.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/InventorySettings/InventoryTypesGrid.cshtml
@@ -13,7 +13,7 @@
     <thead>
         <tr>
             <th>@Translation.Get("Typ")</th>
-            <th>@Translation.Get("Aktiva")</th>
+            <th>@Translation.Get("Visa")</th>
         </tr>
     </thead>
     <tbody>
