--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-actions/case-actions.component.scss
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-actions/case-actions.component.scss
@@ -4,6 +4,29 @@
  font-size:12px;
 }
 
-.mbsc-card-header{
+.mbsc-card-header {
   border-bottom:1px solid #ccc;
+  padding: 12px 1em;
+}
+
+:host  {
+  mbsc-card {
+    border-radius: 0px; 
+
+      &.owner { 
+        border-left:solid 3px #438eb9;
+      }
+
+     .time {
+        font-weight:normal;
+        font-size:13px;
+      }
+
+      .author{
+        font-size:13px;
+        font-weight: normal;
+      }
+
+      
+  }
 }
