#66534	Actions / Händelser - UI

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-actions/actions/field-change-action/field-change-action.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-actions/actions/field-change-action/field-change-action.component.html
@@ -1,4 +1,4 @@
-<div>
-  <span class="{{ getActionIcon() }}"></span>  
-  <span><b>{{data.fieldName}}:</b> {{data.newValue}}</span>  
+<div *ngIf="data">
+  <span class="{{ getActionIcon() }}"></span>
+  <span><b>{{data.fieldName}}:</b> {{data.newValue}}</span>
 </div>
