--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-actions/case-actions.component.scss
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-actions/case-actions.component.scss
@@ -17,9 +17,13 @@
         border-left:solid 3px #438eb9;
       }
 
+      .mbsc-card-subtitle {
+        color:#333;
+      }
+
      .time {
         font-weight:normal;
-        font-size:13px;
+        font-size:12px;
       }
 
       .author{
