--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-actions/actions/general-action/general-action.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-actions/actions/general-action/general-action.component.html
@@ -1,4 +1,13 @@
-<div>
+
+<div *ngIf="data">
   <span class="{{ getActionIcon() }}"></span>
-  <span>{{data.text}}</span> 
+   <ng-container *ngIf="data.action;else noAction">
+      <span><b>{{ data.action }}</b>: {{ data.text }}</span>
+   </ng-container>
 </div>
+
+<ng-template #noAction>
+  <span>{{ data.text }}</span>
+</ng-template>
+
+
