--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/content/styles/styles.scss
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/content/styles/styles.scss
@@ -208,6 +208,8 @@ ul.nostyle {
 
 #case-tabs .mbsc-ms-top.mbsc-ms-c {
   top: 46px!important;
+  box-shadow: 0 2px 2px -2px rgba(68,68,68,0.6);
+  
 }  
 
 
