#68336 Followers are not shown if case is locked by other user.

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_Input.cshtml
@@ -322,6 +322,7 @@
                                                 {
                                                     <td style="@Model.GetFieldStyle(GlobalEnums.TranslationCaseFields.AddFollowersBtn, CaseSolutionFields.AddFollowersBtn)">
                                                         @Html.HiddenFor(model => model.FollowerUsers, new { @readonly = "true", id = "extraEmailsInput" })
+                                                        
                                                         @if (!Model.IsReadOnly(GlobalEnums.TranslationCaseFields.AddFollowersBtn, CaseSolutionFields.AddFollowersBtn))
                                                         {
                                                             @Html.Partial("ModalDialogs/_ExtraEmails", Model.FollowersModel)
@@ -330,8 +331,10 @@
                                                         }
                                                         else
                                                         {
+                                                            @Html.Partial("ModalDialogs/_ExtraEmails", Model.FollowersModel, new ViewDataDictionary { { "isFollowersReadonly", true } })
                                                             <a href="#add_extra_emails_btn" role="button" class="btn case-usersearch-btn disabled" disabled="true" data-toggle="modal">@Translation.GetCoreTextTranslation("Välj följare")</a>
                                                             <div id="fakeExtraEmailsInput" contenteditable="false" class="case-send-emails-div-readonly case-send-emails-div case-usersearch-textarea @Model.getSearchEmailClass(CaseSectionType.Initiator)"></div>
+
                                                         }
                                                     </td>
                                                 }
@@ -2411,6 +2414,8 @@
         if (isVisible) {
             $("#fakeCaseFollowerUsersInput").html(getHtmlFromEmails($("#caseFollowerUsersInput").val()));
         }
+
+        var isFollowersReadonly = 
 
         var scope = dhHelpdesk.cases.scope(window.parameters.casesScopeInitParameters);
     });
