--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-actions/actions/log-note-action/log-note-action.component.scss
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-actions/actions/log-note-action/log-note-action.component.scss
@@ -1,3 +1,13 @@
 .logNoteText {
   font-style: italic;
+  margin:0 0 10px 0;  
+}
+
+ul.files{
+  list-style: none none;
+  padding:0;
+  margin:0;
+  li {
+    margin: 2px 0;
+  }
 }
