#66534	Actions / Händelser - UI.

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-actions/case-actions.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-actions/case-actions.component.html
@@ -4,9 +4,9 @@
       <mbsc-card-subtitle class="mbsc-txt-s">
         <div class="mbsc-grid mbsc-margin mbsc-txt-muted mbsc-bold mbsc-txt-s">
           <div class="mbsc-row mbsc-no-padding">
-            <div class="mbsc-col-6 time"><span><i class="mbsc-ic mbsc-ic-fa-clock-o"></i> {{ group.CreatedAt |
+            <div class="mbsc-col-6 time"><span><i class="mbsc-ic mbsc-ic-fa-clock-o"></i> {{ group.createdAt |
                 date:'yyyy-MM-dd HH:mm' }}</span></div>
-            <div class="mbsc-col-6 mbsc-bold author">{{ group.CreatedByUserName }}</div>
+            <div class="mbsc-col-6 mbsc-bold author">{{ group.createdBy }}</div>
           </div>
         </div>
       </mbsc-card-subtitle>
