--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-actions/actions/log-note-action/log-note-action.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-actions/actions/log-note-action/log-note-action.component.html
@@ -1,8 +1,15 @@
 <div *ngIf="data">  
-  <div *ngIf="data.text && data.text.length" class="logNoteText">
-      <span><i class="{{ getActionIcon() }}"></i> {{data.text | truncate:20}}</span>
+  <div *ngIf="data.text && data.text.length"  >
+        <span class="{{ getActionIcon() }}"></span>
+        <span #tr="truncate" truncate="10" class="logNoteText">{{data.text}}</span>
+        <div [hidden]="!tr.isTruncated">
+            <a class="more" href="javascript:;" (click)="tr.showText()">show more</a>
+        </div>        
+        <div [hidden]="tr.isTruncated || !tr.canTruncate">
+            <a class="less" href="javascript:;" (click)="tr.truncate()">show less</a>
+        </div> 
   </div>
-  <ul class="files">
+  <ul *ngIf="data.files && data.files.length" class="files">
       <li *ngFor="let file of data.files"><span><i class="mbsc-ic mbsc-ic-fa-paperclip"></i> {{ file.fileName }}</span></li>
   </ul>
 </div>
