--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-actions/actions/log-note-action/log-note-action.component.scss
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-actions/actions/log-note-action/log-note-action.component.scss
@@ -1,13 +1,17 @@
 .logNoteText {
-  font-style: italic;
-  margin:0 0 10px 0;  
+  font-style: italic;  
 }
 
 ul.files{
   list-style: none none;
   padding:0;
-  margin:0;
+  margin:10px 0;
   li {
     margin: 2px 0;
   }
+}
+
+a.more, a.less {
+  display: block;
+  margin: 5px 0px;
 }
