--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-edit.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-edit.component.html
@@ -1,6 +1,7 @@
 <mbsc-form class="mbsc-padding md-load-btn md-btn-isLoading" [hidden]="isLoaded">
     <mbsc-button flat block icon="loop2" ></mbsc-button>
 </mbsc-form>
+
 <mbsc-form *ngIf="isLoaded">
     <div id="case-header">
       <mbsc-tab-nav [options]="titleTabsSettings" class="case-header">
@@ -11,15 +12,15 @@
     </div>
     
     <div id="case-tabs">
-      <mbsc-tab-nav [options]="caseTabsSettings" class="case-sub-header">          
-          <mbsc-nav-item selected="currentTab == 'case_details'" (click)="currentTab='case_details'" translate>Ärende</mbsc-nav-item>
-          <mbsc-nav-item selected="currentTab == 'case_actions'" (click)="currentTab='case_actions'" translate>Händelser</mbsc-nav-item>
-          <mbsc-nav-item selected="currentTab == 'case_workflows'" (click)="currentTab='case_workflows'" translate>Åtgärd</mbsc-nav-item>
+      <mbsc-tab-nav [options]="caseTabsSettings" class="case-sub-header">
+          <mbsc-nav-item [selected]="currentTab == 'case_details'" (click)="currentTab='case_details'" translate>Ärende</mbsc-nav-item>
+          <mbsc-nav-item [selected]="currentTab == 'case_actions'" (click)="currentTab='case_actions'" translate>Händelser</mbsc-nav-item>
+          <mbsc-nav-item [selected]="currentTab == 'case_workflows'" (click)="currentTab='case_workflows'" translate>Åtgärd</mbsc-nav-item>
       </mbsc-tab-nav>
     </div>
   </mbsc-form>
 
-<mbsc-form *ngIf="isLoaded" class="case-content">  
+<mbsc-form *ngIf="isLoaded" class="case-content">
 
     <!-- Case Actions -->
     <div *ngIf="currentTab == 'case_actions'">
