--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/content/styles/styles.scss
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/content/styles/styles.scss
@@ -206,12 +206,12 @@ ul.nostyle {
     }
 } 
 
-#case-tabs .mbsc-ms-top.mbsc-ms-c {
-  top: 46px!important;
-  box-shadow: 0 2px 2px -2px rgba(68,68,68,0.6);
+#case-tabs{
   
-}  
-
+  .mbsc-ms-top.mbsc-ms-c { top: 46px!important; }
+  .mbsc-ms-item { padding-left:10px; padding-right:30px; }
+  .mbsc-ms-b.mbsc-ms-top, .mbsc-ms-b .mbsc-ms-item-sel { border-bottom-color:$primary-color; }
+}
 
 #case-actions {
   .mbsc-ios.mbsc-card.mbsc-form{ margin: 15px 10px; }
