--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-actions/actions/log-note-action/log-note-action.component.scss
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-actions/actions/log-note-action/log-note-action.component.scss
@@ -1,3 +1,6 @@
+.lognote{
+  
+}
 .logNoteText {
   font-style: italic;  
 }
@@ -5,13 +8,13 @@
 ul.files{
   list-style: none none;
   padding:0;
-  margin:10px 0;
+  margin:0;
   li {
-    margin: 2px 0;
+    margin: 2px 0 0 0;
   }
 }
 
 a.more, a.less {
   display: block;
-  margin: 5px 0px;
+  margin: 5px 0 0 0;
 }
