#66535 - Actions / Händelser - API - added other fields

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLog.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLog.cshtml
@@ -4,6 +4,7 @@
 @using DH.Helpdesk.Web.Infrastructure.Extensions.HtmlHelperExtensions
 @using DH.Helpdesk.Common.Enums
 @using DH.Helpdesk.Common.Enums.Settings
+@using DH.Helpdesk.Web.Common.Extensions
 
 @if (Model != null && Model.Logs != null)
 {
