[FIX] #68093 Headline attached file

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/case-files/case-files-control.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/case-files/case-files-control.component.html
@@ -1,5 +1,5 @@
 <div class="case-subsection">
-<span class="mbsc-label case-subsection-title" translate>Bifogade filer</span>
+<span class="mbsc-label case-subsection-title" translate>Bifogad fil</span>
 <br>
   <mbsc-listview [options]="fileListSettings">
       <mbsc-listview-item *ngFor="let item of files; trackBy: identify" 
