#66263 - Ballonchatt in SelfService is tricky to close

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Content/css/selfservice.css
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Content/css/selfservice.css
@@ -587,7 +587,7 @@ a.error, input[type=¨button].error .btn
 /***COMMUNICATE****/
 
 .siteCom {
-  width:600px;
+  max-width:600px;
   position:fixed;
   left:-600px;
   top:0;
